--- a/droidbox/src/main/res/values/strings.xml
+++ b/droidbox/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">DroidBox</string>
 
-    <string name="connection_error_message">No connection!</string>
-    <string name="reconnect">Reconnect</string>
-    <string name="retry">Retry</string>
+    <!--ERROR-->
+    <string name="ERROR_DefaultMessage">Oops! Something went wrong!</string>
+    <string name="ERROR_NetworkError">Connection not available!</string>
+    <string name="ERROR_Retry">Retry</string>
+    <string name="ERROR_Reconnect">Reconnect</string>
 
     <!--EXCEPTION-->
     <string name="EXCEPTION_EmptyRepository">The repository is empty: it can not fetch from the network or upload data from databases</string>
