--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">DroidBoxSample</string>
+
+    <string name="VALIDATOR_Regex">^\\+(?:[0-9]●?){6,14}[0-9]\$</string>
 </resources>
